feat: allow to display system stats
